--- a/src/main/resources/com/example/homepage/styles.css
+++ b/src/main/resources/com/example/homepage/styles.css
@@ -70,7 +70,7 @@
 .text-field{
     -fx-text-fill: #000000;
     -fx-background-radius: 8;
-    -fx-background-color: #A7D9FF;
+    -fx-background-color: #d4edfc;
     -fx-font-size: 18px;
     -fx-prompt-text-fill: white;
 }
