--- a/src/main/resources/com/example/homepage/Fxmls/adminInfo.fxml
+++ b/src/main/resources/com/example/homepage/Fxmls/adminInfo.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.adminInfoControll">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.adminInfoControll">
    <children>
       <Button layoutX="265.0" layoutY="326.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Button" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="393.0" pickOnBounds="true" preserveRatio="true" />
@@ -67,7 +67,7 @@
       </Text>
       <ImageView fitHeight="150.0" fitWidth="150.0" layoutX="450.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@logo2.png" />
+            <Image url="@../logo2.png" />
          </image>
       </ImageView>
    </children>
