--- a/src/main/resources/com/example/homepage/Fxmls/charge.fxml
+++ b/src/main/resources/com/example/homepage/Fxmls/charge.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="531.0" prefWidth="898.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.chargeControl">
+<AnchorPane prefHeight="531.0" prefWidth="898.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.chargeControl">
    <children>
       <VBox layoutX="299.0" layoutY="104.0" prefHeight="340.0" prefWidth="301.0">
          <children>
@@ -69,7 +69,7 @@
       <Button layoutX="31.0" layoutY="53.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="back" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="772.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@logo2.png" />
+            <Image url="@../logo2.png" />
          </image>
       </ImageView>
    </children>
