--- a/src/main/resources/com/example/homepage/Fxmls/currentCus.fxml
+++ b/src/main/resources/com/example/homepage/Fxmls/currentCus.fxml
@@ -22,7 +22,7 @@
       <Button layoutX="22.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Back" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="667.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@logo2.png" />
+            <Image url="@../logo2.png" />
          </image>
       </ImageView>
     </children>
