--- a/src/main/resources/com/example/homepage/Fxmls/hello-view.fxml
+++ b/src/main/resources/com/example/homepage/Fxmls/hello-view.fxml
@@ -12,16 +12,16 @@
 
 <BorderPane fx:id="border" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.HelloController">
    <center>
-      <AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="883.0" stylesheets="@styles.css" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="883.0" stylesheets="@../styles.css" BorderPane.alignment="CENTER">
          <children>
             <ImageView fx:id="background" fitHeight="499.0" fitWidth="883.0" opacity="0.78" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@bank image.jpg" />
+                  <Image url="@../bank image.jpg" />
                </image>
             </ImageView>
             <ImageView fitHeight="173.0" fitWidth="131.0" layoutX="376.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logo2.png" />
+                  <Image url="@../logo2.png" />
                </image>
             </ImageView>
             <HBox fx:id="buttonBox" alignment="CENTER" layoutX="-451.0" layoutY="182.0" pickOnBounds="false" prefHeight="94.0" prefWidth="1786.0" scaleShape="false" spacing="15.0">
@@ -31,7 +31,7 @@
                         <VBox alignment="CENTER">
                            <ImageView fx:id="chargeImg" fitHeight="50.0" fitWidth="50.0">
                               <image>
-                                 <Image url="@charge.png" />
+                                 <Image url="@../charge.png" />
                               </image>
                            </ImageView>
                            <Label style="-fx-text-fill: Black; -fx-font-size: 14px;" text="Charge" />
@@ -44,7 +44,7 @@
                         <VBox alignment="CENTER" prefHeight="53.0" prefWidth="50.0">
                            <ImageView fx:id="billImg" fitHeight="50.0" fitWidth="50.0">
                               <image>
-                                 <Image url="@bill.png" />
+                                 <Image url="@../bill.png" />
                               </image>
                            </ImageView>
                            <Label style="-fx-text-fill: Black; -fx-font-size: 14px;" text="Bill" />
@@ -57,7 +57,7 @@
                         <VBox alignment="CENTER">
                            <ImageView fx:id="reportImg" fitHeight="50.0" fitWidth="50.0">
                               <image>
-                                 <Image url="@report.png" />
+                                 <Image url="@../report.png" />
                               </image>
                            </ImageView>
                            <Label style="-fx-text-fill: Black; -fx-font-size: 14px;" text="Report" />
@@ -70,7 +70,7 @@
                         <VBox alignment="CENTER">
                            <ImageView fx:id="loanImg" fitHeight="50.0" fitWidth="50.0">
                               <image>
-                                 <Image url="@loan.png" />
+                                 <Image url="@../loan.png" />
                               </image>
                            </ImageView>
                            <Label style="-fx-text-fill: Black; -fx-font-size: 14px;" text="Loan" />
@@ -83,7 +83,7 @@
                         <VBox alignment="CENTER">
                            <ImageView fx:id="transferImg" fitHeight="50.0" fitWidth="55.0">
                               <image>
-                                 <Image url="@transfer.png" />
+                                 <Image url="@../transfer.png" />
                               </image>
                            </ImageView>
                            <Label style="-fx-text-fill: Black; -fx-font-size: 14px;" text="Transfer">
@@ -102,16 +102,16 @@
    <bottom>
       <HBox fx:id="bar" prefHeight="112.0" prefWidth="883.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="profileBtn" mnemonicParsing="false" prefHeight="146.0" prefWidth="296.0" stylesheets="@styles.css">
+            <Button fx:id="profileBtn" mnemonicParsing="false" prefHeight="146.0" prefWidth="296.0" stylesheets="@../styles.css">
                <graphic>
                   <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@iconmale.png" />
+                        <Image url="@../iconmale.png" />
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="homeBtn" mnemonicParsing="false" prefHeight="135.0" prefWidth="305.0" stylesheets="@styles.css" text="Button" />
-            <Button fx:id="walletBtn" mnemonicParsing="false" prefHeight="112.0" prefWidth="283.0" stylesheets="@styles.css" text="Button" />
+            <Button fx:id="homeBtn" mnemonicParsing="false" prefHeight="135.0" prefWidth="305.0" stylesheets="@../styles.css" text="Button" />
+            <Button fx:id="walletBtn" mnemonicParsing="false" prefHeight="112.0" prefWidth="283.0" stylesheets="@../styles.css" text="Button" />
          </children>
       </HBox>
    </bottom>
