--- a/src/main/resources/com/example/homepage/Fxmls/transfre.fxml
+++ b/src/main/resources/com/example/homepage/Fxmls/transfre.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="654.0" prefWidth="936.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.Transfre">
+<AnchorPane prefHeight="654.0" prefWidth="936.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.Transfre">
     <StackPane prefHeight="7.0" prefWidth="0.0" />
      <VBox alignment="TOP_LEFT" layoutX="322.0" layoutY="38.0" maxWidth="431.0" prefHeight="42.0" prefWidth="292.0" spacing="10" style="-fx-background-color: linear-gradient(to bottom right, #A7D9FF, #7ebee8);                  -fx-background-radius: 20; -fx-padding: 20;">
 
@@ -72,7 +72,7 @@
    <Button layoutX="31.0" layoutY="53.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="back" />
    <ImageView fitHeight="150.0" fitWidth="178.0" layoutX="772.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@logo2.png" />
+         <Image url="@../logo2.png" />
       </image>
    </ImageView>
 
