--- a/src/main/resources/com/example/homepage/bill.fxml
+++ b/src/main/resources/com/example/homepage/bill.fxml
@@ -35,7 +35,7 @@
    <Button layoutX="14.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Back" />
    <ImageView fitHeight="150.0" fitWidth="191.0" layoutX="869.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@../logo2.png" />
+         <Image url="@logo2.png" />
       </image>
    </ImageView>
 </AnchorPane>
