--- a/src/main/resources/com/example/homepage/ownerPage.fxml
+++ b/src/main/resources/com/example/homepage/ownerPage.fxml
@@ -7,18 +7,18 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane prefHeight="687.0" prefWidth="918.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="687.0" prefWidth="918.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.ownerPageController">
    <center>
       <AnchorPane prefHeight="558.0" prefWidth="883.0">
          <children>
             <ImageView fitHeight="687.0" fitWidth="924.0" layoutX="-1.0" layoutY="-150.0" opacity="0.79" pickOnBounds="true">
                <image>
-                  <Image url="@../office-background-style_23-2148649783.jpg" />
+                  <Image url="@office-background-style_23-2148649783.jpg" />
                </image>
             </ImageView>
             <HBox layoutX="116.0" layoutY="51.0" prefHeight="317.0" prefWidth="667.0" spacing="70.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="415.0" prefWidth="299.0" text="ADD ADMIN" />
+                  <Button mnemonicParsing="false" onAction="#changeToAddAdmin" prefHeight="415.0" prefWidth="299.0" text="ADD ADMIN" />
                   <Button mnemonicParsing="false" prefHeight="409.0" prefWidth="299.0" text="ADMIN LIST" />
                   <Button layoutX="378.0" layoutY="10.0" mnemonicParsing="false" prefHeight="409.0" prefWidth="299.0" text="Income" />
                </children>
@@ -32,7 +32,7 @@
             <Button mnemonicParsing="false" text="Button" />
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../logo2.png" />
+                  <Image url="@logo2.png" />
                </image>
             </ImageView>
          </children>
