--- a/src/main/resources/com/example/homepage/pendingReq .fxml
+++ b/src/main/resources/com/example/homepage/pendingReq .fxml
@@ -30,7 +30,7 @@
    <Button layoutX="14.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="back" />
    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="814.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@../logo2.png" />
+         <Image url="@logo2.png" />
       </image>
    </ImageView>
 </AnchorPane>
