--- a/src/main/resources/com/example/homepage/profilePage.fxml
+++ b/src/main/resources/com/example/homepage/profilePage.fxml
@@ -10,16 +10,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane stylesheets="@../profileStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.profilePageController">
+<BorderPane stylesheets="@profileStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.profilePageController">
    <center>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="558.0" prefWidth="883.0" stylesheets="@../profileStyle.css">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="558.0" prefWidth="883.0" stylesheets="@profileStyle.css">
          <children>
             <ImageView fitHeight="783.0" fitWidth="883.0" layoutY="-108.0" pickOnBounds="true">
                <image>
-                  <Image url="@../bank-vault-background-with-money-gold-vector-38245816.jpg" />
+                  <Image url="@bank-vault-background-with-money-gold-vector-38245816.jpg" />
                </image>
             </ImageView>
-            <VBox id="signInBox" layoutX="189.0" layoutY="11.0" prefHeight="537.0" prefWidth="502.0" stylesheets="@../profileStyle.css">
+            <VBox id="signInBox" layoutX="189.0" layoutY="11.0" prefHeight="537.0" prefWidth="502.0" stylesheets="@profileStyle.css">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="82.0" prefWidth="494.0">
                      <children>
@@ -79,7 +79,7 @@
    <top>
       <ImageView fx:id="profileImg" fitHeight="107.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
-            <Image url="@../iconmale.png" />
+            <Image url="@iconmale.png" />
          </image>
       </ImageView>
    </top>
