--- a/src/main/resources/com/example/homepage/welcomePage.fxml
+++ b/src/main/resources/com/example/homepage/welcomePage.fxml
@@ -11,26 +11,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="558.0" prefWidth="1500.0" stylesheets="@../profileStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.welcomePageController">
+<AnchorPane prefHeight="558.0" prefWidth="1500.0" stylesheets="@profileStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.welcomePageController">
    <children>
       <ImageView fitHeight="691.0" fitWidth="1149.0" opacity="0.86" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../bank-vault-background-with-money-gold-vector-38245816.jpg" />
+            <Image url="@bank-vault-background-with-money-gold-vector-38245816.jpg" />
          </image>
       </ImageView>
-      <Label id="message" fx:id="message" alignment="CENTER" contentDisplay="TOP" layoutX="288.0" layoutY="99.0" prefHeight="360.0" prefWidth="307.0" stylesheets="@../profileStyle.css" text="MORE THAN 100,000,000 USERS WORLDWIDE!" textAlignment="CENTER" wrapText="true" />
+      <Label id="message" fx:id="message" alignment="CENTER" contentDisplay="TOP" layoutX="288.0" layoutY="99.0" prefHeight="360.0" prefWidth="307.0" stylesheets="@profileStyle.css" text="MORE THAN 100,000,000 USERS WORLDWIDE!" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="checkBtn" layoutX="661.0" layoutY="257.0" mnemonicParsing="false" onAction="#signInAnimation" prefHeight="44.0" prefWidth="109.0" text="check it out!" />
       <Button fx:id="NextBtn" layoutX="408.0" layoutY="437.0" mnemonicParsing="false" onAction="#nextMessage" text="Button" />
-      <VBox id="signInBox" fx:id="signInBox" alignment="TOP_CENTER" layoutX="1016.0" layoutY="34.0" prefHeight="490.0" prefWidth="383.0" spacing="50.0" stylesheets="@../profileStyle.css">
+      <VBox id="signInBox" fx:id="signInBox" alignment="TOP_CENTER" layoutX="1016.0" layoutY="34.0" prefHeight="490.0" prefWidth="383.0" spacing="50.0" stylesheets="@profileStyle.css">
          <children>
             <ImageView fitHeight="84.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../iconmale.png" />
+                  <Image url="@iconmale.png" />
                </image>
             </ImageView>
-            <TextField fx:id="username" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="282.0" promptText="USERNAME" stylesheets="@../styles.css" />
-            <PasswordField fx:id="password" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="282.0" promptText="PASSWORD" stylesheets="@../styles.css" />
-            <Button id="signInBtn" mnemonicParsing="false" onAction="#signIn" stylesheets="@../profileStyle.css" text="Sign In" />
+            <TextField fx:id="username" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="282.0" promptText="USERNAME" stylesheets="@styles.css" />
+            <PasswordField fx:id="password" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="282.0" promptText="PASSWORD" stylesheets="@styles.css" />
+            <Button id="signInBtn" mnemonicParsing="false" onAction="#signIn" stylesheets="@profileStyle.css" text="Sign In" />
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Label text="Don't have an account?" />
