--- a/src/main/resources/com/example/homepage/Signup.fxml
+++ b/src/main/resources/com/example/homepage/Signup.fxml
@@ -3,65 +3,47 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="570.0" prefWidth="932.0" style="-fx-background-color: #D0F1FF;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.SignUpController">
+<AnchorPane prefHeight="558.0" prefWidth="883.0" style="-fx-background-color: #D0F1FF;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.SignUpController">
    <children>
-      <Button fx:id="BackBtn" layoutX="44.0" layoutY="37.0" mnemonicParsing="false" onAction="#goToSignIn" prefHeight="25.0" prefWidth="105.0" text="back">
+      <Button fx:id="BackBtn" layoutX="44.0" layoutY="37.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="back">
          <stylesheets>
             <URL value="@styles.css" />
             <URL value="@styles.css" />
          </stylesheets></Button>
-      <VBox accessibleText="g" layoutX="250.0" layoutY="38.0" prefHeight="400.0" prefWidth="400.0">
+      <VBox id="signInBox" accessibleText="g" alignment="CENTER" layoutX="266.0" layoutY="18.0" prefHeight="474.0" prefWidth="400.0" spacing="10.0" stylesheets="@styles.css">
          <children>
-            <TextField fx:id="NameField" promptText="Full name" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <TextField fx:id="IDNumberField" promptText="Phone number" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <DatePicker prefHeight="40.0" prefWidth="405.0" promptText="Date of birth" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </DatePicker>
-            <TextField fx:id="CardNumberField" promptText="National ID number" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <TextField fx:id="CVV2Field" promptText="Card number" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <TextField fx:id="EmailField" promptText="CVV number" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <TextField fx:id="PhoneNumberField" promptText="Email adress" stylesheets="@styles.css">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </TextField>
-            <Button fx:id="ConfirmBtn" mnemonicParsing="false" onAction="#goToFinalizeSignup" prefHeight="44.0" prefWidth="89.0" stylesheets="@styles.css" text="confirm">
-               <VBox.margin>
-                  <Insets left="150.0" top="30.0" />
-               </VBox.margin>
-            </Button>
+            <TextField fx:id="name" alignment="CENTER" maxWidth="-Infinity" prefHeight="39.0" prefWidth="301.0" promptText="Name" />
+            <TextField fx:id="lastName" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="301.0" promptText="Last Name" />
+            <HBox alignment="CENTER" prefHeight="52.0" prefWidth="357.0">
+               <children>
+                  <TextField fx:id="age" alignment="CENTER" prefHeight="39.0" prefWidth="96.0" promptText="Age" />
+                  <DatePicker fx:id="birthday" promptText="Birth Date" />
+               </children>
+            </HBox>
+            <TextField fx:id="gender" alignment="CENTER" maxWidth="-Infinity" prefWidth="301.0" promptText="Gender" />
+            <TextField fx:id="phone" alignment="CENTER" maxWidth="-Infinity" prefWidth="301.0" promptText="Phone number" />
+            <TextField fx:id="email" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="301.0" promptText="Email(optioan)" />
+            <TextField fx:id="username" alignment="CENTER" maxWidth="-Infinity" prefWidth="301.0" promptText="Choose Username" />
+            <PasswordField fx:id="password" alignment="CENTER" maxWidth="-Infinity" prefWidth="301.0" promptText="choose password" />
+            <PasswordField fx:id="confirmPass" alignment="CENTER" maxWidth="-Infinity" prefWidth="301.0" promptText="confirm password" />
+            <CheckBox mnemonicParsing="false" text="I have read and agreed to the terms and conditions." />
+            <Button mnemonicParsing="false" onAction="#createCustomer" text="Button" />
          </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
       </VBox>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="768.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="114.0" fitWidth="150.0" layoutX="732.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@logo2.png" />
          </image>
