--- a/src/main/resources/com/example/homepage/hello-view.fxml
+++ b/src/main/resources/com/example/homepage/hello-view.fxml
@@ -102,9 +102,9 @@
    <bottom>
       <HBox fx:id="bar" prefHeight="112.0" prefWidth="883.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="profileBtn" mnemonicParsing="false" prefHeight="146.0" prefWidth="296.0" stylesheets="@styles.css">
+            <Button fx:id="profileBtn" mnemonicParsing="false" onAction="#switchToProfile" prefHeight="146.0" prefWidth="296.0" stylesheets="@styles.css">
                <graphic>
-                  <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="profileImg" fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@iconmale.png" />
                      </image>
