--- a/src/main/resources/com/example/homepage/ownerPage.fxml
+++ b/src/main/resources/com/example/homepage/ownerPage.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane prefHeight="687.0" prefWidth="918.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.ownerPageController">
+<BorderPane prefHeight="687.0" prefWidth="918.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.ownerPageController">
    <center>
       <AnchorPane prefHeight="558.0" prefWidth="883.0">
          <children>
@@ -19,8 +23,8 @@
             <HBox layoutX="116.0" layoutY="51.0" prefHeight="317.0" prefWidth="667.0" spacing="70.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#changeToAddAdmin" prefHeight="415.0" prefWidth="299.0" text="ADD ADMIN" />
-                  <Button mnemonicParsing="false" prefHeight="409.0" prefWidth="299.0" text="ADMIN LIST" />
-                  <Button layoutX="378.0" layoutY="10.0" mnemonicParsing="false" prefHeight="409.0" prefWidth="299.0" text="Income" />
+                  <Button mnemonicParsing="false" onAction="#switchToAdminList" prefHeight="409.0" prefWidth="299.0" text="ADMIN LIST" />
+                  <Button layoutX="378.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToIncome" prefHeight="409.0" prefWidth="299.0" text="Income" />
                </children>
             </HBox>
          </children>
@@ -29,7 +33,7 @@
    <top>
       <HBox prefHeight="132.0" prefWidth="918.0" spacing="290.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Button" />
+            <Button mnemonicParsing="false" onAction="#backToSigninFromOwnerPage" text="back" />
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@logo2.png" />
