--- a/src/main/resources/com/example/homepage/hello-view.fxml
+++ b/src/main/resources/com/example/homepage/hello-view.fxml
@@ -26,7 +26,7 @@
             </ImageView>
             <ImageView fitHeight="173.0" fitWidth="131.0" layoutX="376.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logo2.png" />
+                  <Image url="@logo2-removebg-preview.png" />
                </image>
             </ImageView>
             <HBox fx:id="buttonBox" alignment="CENTER" layoutX="-451.0" layoutY="182.0" pickOnBounds="false" prefHeight="94.0" prefWidth="1786.0" scaleShape="false" spacing="15.0">
@@ -123,7 +123,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="walletBtn" mnemonicParsing="false" prefHeight="146.0" prefWidth="296.0" stylesheets="@styles.css">
+            <Button fx:id="walletBtn" mnemonicParsing="false" onAction="#switchToAccountsStatus" prefHeight="146.0" prefWidth="296.0" stylesheets="@styles.css">
                <graphic>
                   <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                      <image>
