--- a/src/main/resources/com/example/homepage/adminPage.fxml
+++ b/src/main/resources/com/example/homepage/adminPage.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -13,7 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane fx:id="border" prefHeight="673.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.adminController">
+<BorderPane fx:id="border" prefHeight="673.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.adminController">
    <center>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="883.0" stylesheets="@styles.css" BorderPane.alignment="CENTER">
          <children>
@@ -32,9 +27,9 @@
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <Button fx:id="pendingBtn" mnemonicParsing="false" prefHeight="103.0" prefWidth="135.0" stylesheets="@styles.css">
+                  <Button fx:id="pendingBtn" mnemonicParsing="false" onAction="#switchToPendingRequests" prefHeight="103.0" prefWidth="135.0" stylesheets="@styles.css">
                      <graphic>
-                        <ImageView fitHeight="89.0" fitWidth="94.0" onDragDetected="#switchToPendingRequests" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@pendingicon.png" />
                            </image>
@@ -42,13 +37,13 @@
                      </graphic></Button>
                   <Button fx:id="activeLoansBtn" mnemonicParsing="false" prefHeight="83.0" prefWidth="138.0" stylesheets="@styles.css">
                      <graphic>
-                        <ImageView fitHeight="89.0" fitWidth="94.0" onDragDetected="#switchToActiveLoans" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@activeloanicon.png" />
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <Button fx:id="adminInfoBtn" mnemonicParsing="false" onAction="#switchToAdminInfo" prefHeight="110.0" prefWidth="128.0" stylesheets="@styles.css">
+                  <Button fx:id="adminInfoBtn" mnemonicParsing="false"  prefHeight="110.0" prefWidth="128.0" stylesheets="@styles.css">
                      <graphic>
                         <ImageView fitHeight="89.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,7 +59,7 @@
    <top>
       <HBox fx:id="topBox" spacing="290.0" BorderPane.alignment="TOP_LEFT">
          <children>
-            <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backToSigninFromAdmin" prefHeight="44.0" prefWidth="67.0" stylesheets="@styles.css" text="back" />
+            <Button fx:id="backBtn" mnemonicParsing="false"  prefHeight="44.0" prefWidth="67.0" stylesheets="@styles.css" text="back" />
             <ImageView fx:id="logo" fitHeight="150.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@logo2-removebg-preview.png" />
