--- a/src/main/resources/com/example/homepage/pendingReq .fxml
+++ b/src/main/resources/com/example/homepage/pendingReq .fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="628.0" prefWidth="968.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.pedingReq">
+<AnchorPane prefHeight="628.0" prefWidth="968.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.pedingReq">
     <VBox alignment="TOP_CENTER" layoutX="154.0" layoutY="148.0" prefHeight="410" prefWidth="660" spacing="12">
 
-        <Label style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: black;                       -fx-background-color: #A7D9FF; -fx-padding: 10 20; -fx-background-radius: 10;" text="Pending Account Requests" />
+        <Label style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: black;                       -fx-background-color: #A7D9FF; -fx-padding: 10 20; -fx-background-radius: 10;" text="Pending Requests" />
 
         <TableView fx:id="requestTable" prefHeight="360" prefWidth="660" style="-fx-background-color: white; -fx-border-color: #A7D9FF; -fx-border-radius: 8;">
             <columns>
-                <TableColumn fx:id="usernameColumn" prefWidth="160" text="Username" />
-                <TableColumn fx:id="accountTypeColumn" prefWidth="160" text="Account Type" />
-                <TableColumn fx:id="requestDateColumn" prefWidth="160" text="Request Date" />
-                <TableColumn fx:id="actionsColumn" prefWidth="180" text="Actions" />
+                <TableColumn fx:id="usernameColumn" prefWidth="195.0" text="Requested User" />
+                <TableColumn fx:id="requestTypeColumn" prefWidth="205.0" text="Request type" />
+                <TableColumn fx:id="requestDateColumn" prefWidth="98.0" text="Request Date" />
+            <TableColumn fx:id="requestIdColumn" prefWidth="156.0" text="ID" />
             </columns>
         </TableView>
 
         <!-- Optional: Static buttons outside table -->
         <HBox spacing="10">
-            <Button style="-fx-background-color: #A7D9FF; -fx-text-fill: black;" text="Approve" />
+            <Button onAction="#acceptRequest" style="-fx-background-color: #A7D9FF; -fx-text-fill: black;" text="Approve" />
             <Button style="-fx-background-color: #ffb3b3; -fx-text-fill: black;" text="Reject" />
         </HBox>
     </VBox>
