--- a/src/main/resources/com/example/homepage/addAdminPage.fxml
+++ b/src/main/resources/com/example/homepage/addAdminPage.fxml
@@ -23,13 +23,13 @@
          <children>
             <VBox id="signInBox" alignment="TOP_CENTER" layoutX="250.0" layoutY="28.0" prefHeight="489.0" prefWidth="415.0" spacing="20.0">
                <children>
-                  <TextField fx:id="name" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" stylesheets="@styles.css" text="Name" />
-                  <TextField fx:id="surname" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" stylesheets="@styles.css" text="Surname" />
-                  <TextField fx:id="age" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" text="Age" />
-                  <TextField fx:id="gender" alignment="CENTER" layoutX="15.0" layoutY="73.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" text="Gender" />
-                  <TextField fx:id="username" alignment="CENTER" layoutX="15.0" layoutY="112.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" text="Username" />
-                  <TextField fx:id="password" alignment="CENTER" layoutX="15.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" text="Passwrod" />
-                  <TextField alignment="CENTER" layoutX="15.0" layoutY="190.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="276.0" text="Confirm Passwrod" />
+                  <TextField fx:id="name" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Name" stylesheets="@styles.css" />
+                  <TextField fx:id="surname" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="LastName" stylesheets="@styles.css" />
+                  <TextField fx:id="age" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Age" />
+                  <TextField fx:id="gender" alignment="CENTER" layoutX="15.0" layoutY="73.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Gender" />
+                  <TextField fx:id="username" alignment="CENTER" layoutX="15.0" layoutY="112.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Username" />
+                  <TextField fx:id="password" alignment="CENTER" layoutX="15.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Password" />
+                  <TextField alignment="CENTER" layoutX="15.0" layoutY="190.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="276.0" promptText="confirmPassword" />
                   <Button id="signInBtn" mnemonicParsing="false" onAction="#addAdmin" stylesheets="@profileStyle.css" text="Add Admin" />
                </children>
                <padding>
